--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -23,6 +23,7 @@ $header-block-right
 .header-inner
     height: 100%
     position: relative
+    border-bottom: 1px solid #dadde1
     #logo
         @extend $header-block
         @extend $header-block-left
