--- a/source/css/_partial/profile.styl
+++ b/source/css/_partial/profile.styl
@@ -27,7 +27,9 @@
         @extend $block
         margin-top: block-margin
         background: white
+        border: 1px solid #dadde1
         .base-info
+            border-bottom: 1px solid #dadde1
             #avatar
                 display: block
                 margin: 10px auto 20px
@@ -62,6 +64,7 @@
         .article-info
             clearfix()
             padding: 0px
+            border-bottom: 1px solid #dadde1
             .article-info-block
                 width: 50%
                 float: left
@@ -74,7 +77,7 @@
                     font-size: font-size
                     text-transform: uppercase
                 &:first-child
-                    border-right: 1px solid color-border
+                    border-right: 1px solid #dadde1
         .social-links
             & > table
                 width: 100%
