--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -17,7 +17,7 @@ html, body, #container
 
 body
     color: color-default
-    background: color-background
+    //background: color-background
     font: font-size font-sans
     -webkit-text-size-adjust: 100%
 
@@ -90,8 +90,8 @@ code
 @import "_partial/insight"
 @import "_highlight/index"
 
-if sidebar is left
-    #main
-        float: right
-    #profile
-        float: right
+//if sidebar is left
+#main
+    float: right
+#profile
+    float: right
