--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -4,7 +4,7 @@
 .article-inner
     @extend $block
     overflow: hidden
-    border-top: 1px solid #dadde1
+    border: 1px solid #dadde1
 
 .article-banner
     width:100%
